--- a/src/styled/Service.css
+++ b/src/styled/Service.css
@@ -26,7 +26,7 @@
     height: 100vh;
     object-fit: cover;
     filter: brightness(60%);
-    z-index: -1;
+    /* z-index: -1; */
 }
 .slide-contents-wrap{
     position: absolute;
