--- a/src/styled/Service.css
+++ b/src/styled/Service.css
@@ -2,24 +2,27 @@
 #service{
     height: 100vh;
 }
-.mobile-service{
+/* .mobile-service{
     display: none;
     font-size: clamp(70px, 7vw, 98px);
     font-weight: bold;
     color: #3FA9F5;
     padding-top: 20px;
     margin-bottom: 20px;
-}
+} */
 /* .mobile-content{
     display: none;
     font-size: clamp(18px, 3vw, 32px);
     color: #fff;
 } */
-.service-wrap{
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-}
+.desktop-service-wrap{display: block;}
+.mobile-service-wrap{display: none;}
+
+.desktop-service-wrap{width: 100%; height: 100%; margin: 0 auto;}
+.mobile-service-wrap{width: 100%; height: 100%; margin: 0 auto;}
+.desktop-swiper{display: block;}
+.mobile-swiper{display: none;}
+
 .slide-wrap{width: 100vw; height: 100vh;}
 .video-wrap{
     width: 100vw;
@@ -27,6 +30,14 @@
     object-fit: cover;
     filter: brightness(60%);
     /* z-index: -1; */
+}
+.mobile-bg-wrap{
+    width: 100%;
+    height: 100vh;
+}
+.mobile-bg-wrap img{
+    width: 100%;
+    height: 100%;
 }
 .slide-contents-wrap{
     position: absolute;
@@ -62,7 +73,8 @@
 }
 .left-contents-wrap-01 img{
     /* width: 500px; */
-    width: clamp(300px, 26vw, 500px);
+    /* width: clamp(300px, 26vw, 500px); */
+    width: clamp(230px, 26vw, 500px);
     /* margin-top: 20px; */
     margin-top: clamp(20px, 9vw, 60px);
     margin-bottom: 20px;
@@ -70,32 +82,38 @@
 }
 .left-contents-wrap-01 h2{
     /* font-size: 60px; */
-    font-size: clamp(30px, 3vw, 60px);
+    font-size: clamp(30px, 3vw, 50px);
     margin-bottom: 32px;
     color: #fff;
 }
+.left-contents-wrap-01 h4{
+    /* font-size: 52px; */
+    font-size: clamp(15px, 3vw, 30px);
+    color: #fff;
+    margin-bottom: 20px;
+}
 .left-contents-wrap-01 p{
     /* font-size: 32px; */
-    font-size: clamp(18px, 3vw, 32px);
+    font-size: clamp(13px, 3vw, 25px);
     margin-bottom: 32px;
     color: #fff;
 }
 .left-contents-wrap-01 span{
     /* font-size: 24px; */
-    font-size: clamp(18px, 3vw, 24px);
+    font-size: clamp(12px, 3vw, 24px);
     color: #fff;
 }
 .right-mockup-wrap-01{}
 /* .right-mockup-wrap-01 img{width: 363px;} */
 .right-mockup-wrap-01 img{
     /* width: 20vw; */
-    /* width: clamp(300px, 17vw, 400px); */
-    width: clamp(300px, 30vw, 400px);
+    /* width: clamp(300px, 30vw, 400px); */
+    width: clamp(200px, 30vw, 300px);
 }
 .custom-pagination{
     position: absolute;
     width: 100%;
-    top: 85% !important;
+    top: 90% !important;
     /* left: 50% !important; */
     /* transform: translate(-50%, 0) !important; */
     display: flex;
@@ -123,7 +141,11 @@
 }
 
 @media screen and (max-width: 600px) {
-    /* .desktop-service-wrap{display: none;} */
+    #service{height: auto;}
+    .desktop-service-wrap{display: none;}
+    .mobile-service-wrap{display: block;}
+    .desktop-swiper{display: none;}
+    .mobile-swiper{display: block;}
     .slide-wrap{width: calc(100vw - (100vw - 100%));}
     .slide-contents-wrap{flex-direction: column; }
     .mobile-service{display: block; animation: slide 10s linear infinite;}
@@ -138,10 +160,10 @@
     .left-contents-wrap-01{align-items: center;}
     .left-contents-wrap-01 h3{text-align: center; font-size: 20px;}
     .left-contents-wrap-01 img{margin-top: 20px; margin-left: 0;}
-    .left-contents-wrap-01 h2{font-size: 25px; text-align: center; margin-bottom: 15px;}
+    .left-contents-wrap-01 h2{font-size: 20px; text-align: center; margin-bottom: 15px;}
     .left-contents-wrap-01 p{text-align: center;}
     .second-slide-contents-wrap h4{font-size: 18px; margin-bottom: 15px;}
     .right-mockup-wrap-01{margin-top: 30px;}
-    .right-mockup-wrap-01 img{width: 280px;}
+    .right-mockup-wrap-01 img{width: 200px;}
     .custom-pagination{display: none;}
 }
