--- a/src/styled/Header.css
+++ b/src/styled/Header.css
@@ -16,7 +16,7 @@
     top: 0;
     z-index: 999;
     background: #000;
-    filter: drop-shadow(0 1px 2px rgba(0, 0, 0, .3));
+    /* filter: drop-shadow(0 1px 2px rgba(0, 0, 0, .3)); */
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
   }
   .header-box {
@@ -117,7 +117,8 @@
     height: 4px;
     margin-bottom: 5px;
     position: relative;
-    background: #999;
+    /* background: #999; */
+    background: #fff;
     border-radius: 3px;
     z-index: 1;
     transform-origin: 3px 1px;
@@ -162,7 +163,8 @@
     top: 100%;
     left: 0;
     width: 100%;
-    background: #fff;
+    /* background: #fff; */
+    background: #000;
     max-height: 200px;
     padding-left: 20px;
     padding-right: 20px;
@@ -179,7 +181,7 @@
   }
   .mobile-menu ul li a{
     text-decoration: none;
-    color: #000;
+    color: #fff;
   }
   @media screen and (max-width: 2000px) {
     .header-box{padding-left: 50px; padding-right: 50px;}
