--- a/src/styled/Header.css
+++ b/src/styled/Header.css
@@ -123,16 +123,21 @@
     z-index: 1;
     transform-origin: 3px 1px;
     transition: .3s;
+    -webkit-transition: .3s;
   }
   
   #menuToggle span:first-child
   {
     transform-origin: 0% 0%;
+    -webkit-transform-origin: 0% 0%;
+    -ms-transform-origin: 0% 0%;
   }
   
   #menuToggle span:nth-child(2)
   {
     transform-origin: 0% 100%;
+    -webkit-transform-origin: 0% 100%;
+    -ms-transform-origin: 0% 100%;
   }
   #menuToggle span:last-child
   {
@@ -141,16 +146,22 @@
   
   .menu-toggle.open span:nth-child(1)
   {
+    -webkit-transform: rotate(45deg) translate(1px, -2px); /* Safari, Chrome, newer versions of Opera */
+    -ms-transform: rotate(45deg) translate(1px, -2px); /* IE 9 */
     transform: rotate(45deg) translate(1px, -2px)
   }
   .menu-toggle.open span:nth-child(2)
   {
     opacity: 0;
+    -webkit-transform: rotate(0deg) scale(0.2, 0.2);
+    -ms-transform: rotate(0deg) scale(0.2, 0.2);
     transform: rotate(0deg) scale(0.2, 0.2);
   }
   
   .menu-toggle.open span:nth-child(3)
   {
+    -webkit-transform: rotate(-45deg) translate(0, -1px);
+    -ms-transform: rotate(-45deg) translate(0, -1px);
     transform: rotate(-45deg) translate(0, -1px);
   }
   .mobile-menu{
