--- a/src/styled/Service.css
+++ b/src/styled/Service.css
@@ -16,7 +16,7 @@
     color: #fff;
 } */
 .desktop-service-wrap{display: block;}
-/* .mobile-service-wrap{display: none;} */
+.mobile-service-wrap{display: none; background: black;}
 
 .desktop-service-wrap{width: 100%; height: 100%; margin: 0 auto;}
 .mobile-service-wrap{width: 100%; height: 100%; margin: 0 auto;}
@@ -142,8 +142,8 @@
 
 @media screen and (max-width: 600px) {
     #service{height: auto;}
-    /* .desktop-service-wrap{display: none;}
-    .mobile-service-wrap{display: block;} */
+    .desktop-service-wrap{display: none;}
+    .mobile-service-wrap{display: block;}
     .desktop-swiper{display: none;}
     .mobile-swiper{display: block;}
     .slide-wrap{width: calc(100vw - (100vw - 100%));}
@@ -161,6 +161,7 @@
     .left-contents-wrap-01 h3{text-align: center; font-size: 20px;}
     .left-contents-wrap-01 img{margin-top: 20px; margin-left: 0;}
     .left-contents-wrap-01 h2{font-size: 20px; text-align: center; margin-bottom: 15px;}
+    .left-contents-wrap-01 h4{display: none;}
     .left-contents-wrap-01 p{text-align: center;}
     .second-slide-contents-wrap h4{font-size: 18px; margin-bottom: 15px;}
     .right-mockup-wrap-01{margin-top: 30px;}
