--- a/src/styled/AboutRobotos.css
+++ b/src/styled/AboutRobotos.css
@@ -68,8 +68,8 @@
 }
 .about-robotos-contents-wrap p{
     text-align: center;
-    font-size: clamp(12px, 2vw, 24px);
-    margin-bottom: 56px;
+    font-size: clamp(14px, 2vw, 24px);
+    /* margin-bottom: 56px; */
 }
 /* .about-robotos-contents-wrap span{
     text-align: center;
@@ -83,8 +83,8 @@
     #aboutRobotos{height: auto; padding-top: 50px;}
     .about-robotos-wrap{height: auto;}
     .about-robotos-img-wrap{flex-direction: column; margin-top: 60px;}
-    .about-robotos-left-wrap{width: 100%; height: 450px;}
-    .about-robotos-right-wrap{width: 100%; height: 450px;}
+    .about-robotos-left-wrap{width: 100%; height: 300px;}
+    .about-robotos-right-wrap{width: 100%; height: 300px;}
     .about-robotos-contents-wrap{padding: 0 40px;}
-    .about-robotos-contents-wrap p br{display: none;}
+    .about-robotos-contents-wrap p br{display: block;}
 }
