--- a/src/styled/Home.css
+++ b/src/styled/Home.css
@@ -27,7 +27,7 @@
     width: clamp(120px, 8vw, 283px);
     height: clamp(60px, 8vw, 83px);
 }
-.scroll-wrap{}
+/* .scroll-wrap{} */
 .scroll-wrap > div{
     position: absolute;
     bottom: 3.5rem;
