--- a/src/styled/Service.css
+++ b/src/styled/Service.css
@@ -15,7 +15,7 @@
     font-size: clamp(18px, 3vw, 32px);
     color: #fff;
 } */
-.desktop-service-wrap{display: block;}
+.desktop-service-wrap{display: block; background: black;}
 .mobile-service-wrap{display: none; background: black;}
 
 .desktop-service-wrap{width: 100%; height: 100%; margin: 0 auto;}
