--- a/src/styled/AboutRobotos.css
+++ b/src/styled/AboutRobotos.css
@@ -11,7 +11,9 @@
     margin: 0 auto;
     justify-content: space-around;
 }
-.about-robotos-title-wrap{}
+.about-robotos-title-wrap{
+    margin-bottom: 70px;
+}
 .about-robotos-title-wrap h2{
     /* font-size: 72px; */
     font-size: clamp(30px, 4vw, 72px);
@@ -81,6 +83,7 @@
 @media screen and (max-width: 600px) {
     #aboutRobotos{height: auto; padding-top: 50px;}
     .about-robotos-wrap{height: auto;}
+    .about-robotos-title-wrap{margin-bottom: 0px;}
     .about-robotos-img-wrap{flex-direction: column; margin-top: 60px;}
     .about-robotos-left-wrap{width: 100%; height: 300px;}
     .about-robotos-right-wrap{width: 100%; height: 300px;}
