--- a/src/styled/Service.css
+++ b/src/styled/Service.css
@@ -152,7 +152,8 @@
     .mobile-service-wrap{display: block;}
     .desktop-swiper{display: none;}
     .mobile-swiper{display: block;}
-    .slide-wrap{width: calc(100vw - (100vw - 100%));}
+    .slide-wrap{width: calc(100vw - (100vw - 100%)); height: 900px;}
+    .mobile-bg-wrap{height: 900px;}
     .slide-contents-wrap{flex-direction: column; padding: 50px 0;}
     .mobile-service{display: block; animation: slide 10s linear infinite;}
     @keyframes slide {
