--- a/src/styled/Header.css
+++ b/src/styled/Header.css
@@ -101,8 +101,7 @@
   .header-flex-wrap{
     align-items: center;
   }
-  .menu-toggle
-  {
+  .menu-toggle{
     display: none;
     width: 33px;
     cursor: pointer;
@@ -126,40 +125,34 @@
     -webkit-transition: .3s;
   }
   
-  #menuToggle span:first-child
-  {
+  #menuToggle span:first-child{
     transform-origin: 0% 0%;
     -webkit-transform-origin: 0% 0%;
     -ms-transform-origin: 0% 0%;
   }
   
-  #menuToggle span:nth-child(2)
-  {
+  #menuToggle span:nth-child(2){
     transform-origin: 0% 100%;
     -webkit-transform-origin: 0% 100%;
     -ms-transform-origin: 0% 100%;
   }
-  #menuToggle span:last-child
-  {
+  #menuToggle span:last-child{
     margin-bottom: 0;
   }
   
-  .menu-toggle.open span:nth-child(1)
-  {
+  .menu-toggle.open span:nth-child(1){
     -webkit-transform: rotate(45deg) translate(1px, -2px); /* Safari, Chrome, newer versions of Opera */
     -ms-transform: rotate(45deg) translate(1px, -2px); /* IE 9 */
     transform: rotate(45deg) translate(1px, -2px)
   }
-  .menu-toggle.open span:nth-child(2)
-  {
+  .menu-toggle.open span:nth-child(2){
     opacity: 0;
     -webkit-transform: rotate(0deg) scale(0.2, 0.2);
     -ms-transform: rotate(0deg) scale(0.2, 0.2);
     transform: rotate(0deg) scale(0.2, 0.2);
   }
   
-  .menu-toggle.open span:nth-child(3)
-  {
+  .menu-toggle.open span:nth-child(3){
     -webkit-transform: rotate(-45deg) translate(0, -1px);
     -ms-transform: rotate(-45deg) translate(0, -1px);
     transform: rotate(-45deg) translate(0, -1px);
@@ -194,12 +187,17 @@
     text-decoration: none;
     color: #fff;
   }
+
+  /*--------------------------------------------*\
+                Max-Width 2000px
+  \*--------------------------------------------*/
   @media screen and (max-width: 2000px) {
     .header-box{padding-left: 50px; padding-right: 50px;}
   }
-/*   @media screen and (max-width: 1800px){
-    .header-box{padding-left: 50px; padding-right: 50px;}
-  } */
+
+  /*--------------------------------------------*\
+                Max-Width 1000px
+  \*--------------------------------------------*/
   @media screen and (max-width: 1000px) {
     .header-box{
       padding-left: 20px;
@@ -208,9 +206,9 @@
     .header-box .header-left{
       margin-right: 0;
     }
-    .header-box .header-left img{
-      /* width: 310px; */
-    }
+    /* .header-box .header-left img{
+      width: 310px;
+    } */
     .header-right{
       display: none;
     }
@@ -218,8 +216,12 @@
       display: block;
     }
   }
+  
+  /*--------------------------------------------*\
+                Max-Width 600px
+  \*--------------------------------------------*/
   @media screen and (max-width: 600px) {
-    .header-box .header-left img{
-      /* width: 150px; */
-    }
+    /* .header-box .header-left img{
+      width: 150px;
+    } */
   }
