--- a/src/styled/Home.css
+++ b/src/styled/Home.css
@@ -51,7 +51,10 @@
       transform: translateY(5px);
     }
   }
-
+  
+/*--------------------------------------------*\
+                Max-Width 600px
+\*--------------------------------------------*/
 @media screen and (max-width: 600px) {
     #home{height: auto;}
     #vantaWaves{height: 900px;}
