--- a/src/styled/Service.css
+++ b/src/styled/Service.css
@@ -66,7 +66,7 @@
     margin-bottom: 30px;
     color: #fff;
 }
-.left-contents-wrap-01{}
+/* .left-contents-wrap-01{} */
 .left-contents-wrap-01 h3{
     /* font-size: 52px; */
     font-size: clamp(30px, 3vw, 52px);
@@ -109,7 +109,7 @@
     font-size: clamp(12px, 3vw, 24px);
     color: #fff;
 }
-.right-mockup-wrap-01{}
+/* .right-mockup-wrap-01{} */
 /* .right-mockup-wrap-01 img{width: 363px;} */
 .right-mockup-wrap-01 img{
     /* width: 20vw; */
@@ -146,6 +146,9 @@
     opacity: 1;
 }
 
+/*--------------------------------------------*\
+                Max-Width 600px
+\*--------------------------------------------*/
 @media screen and (max-width: 600px) {
     #service{height: auto;}
     .desktop-service-wrap{display: none;}
