--- a/src/styled/Header.css
+++ b/src/styled/Header.css
@@ -28,6 +28,7 @@
     position: relative;
   }
   .header-box .header-left {
+    width: 100%;
     height: 100%;
     margin-right: 215px;
     cursor: pointer;
