--- a/src/styled/NewPlatform.css
+++ b/src/styled/NewPlatform.css
@@ -1,11 +1,14 @@
 *{font-family: 'Noto Sans KR', sans-serif;}
 #newPlatForm{
-    height: 100vh;
+    /* height: 100vh; */
+    height: 88vh;
+    background: black;
 }
 .newplatform-wrap{
     width: 100%;
     /* height: 740px; */
-    height: 100vh;
+    /* height: 100vh; */
+    height: 80vh;
     margin: 0 auto;
     display: flex;
     align-items: center;
