--- a/src/styled/AboutRobotos.css
+++ b/src/styled/AboutRobotos.css
@@ -1,19 +1,26 @@
 *{font-family: 'Noto Sans KR', sans-serif;}
 #aboutRobotos{
-    height: 100vh;
+    /* height: 100vh; */
+    /* height: 79vh; */
+    height: auto;
     background: black;
 }
 .about-robotos-wrap{
     width: 100%;
-    height: 740px;
+    /* height: 740px; */
+    /* height: 930px; */
+    height: auto;
     margin: 0 auto;
-    justify-content: space-around;
+    /* justify-content: space-around; */
 }
 .about-robotos-title-wrap{
-    margin-bottom: 70px;
+    /* margin-bottom: 70px; */
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 .about-robotos-title-wrap h2{
     /* font-size: 72px; */
+
     font-size: clamp(30px, 4vw, 72px);
     font-weight: bold;
 }
