--- a/src/styled/Partner.css
+++ b/src/styled/Partner.css
@@ -4,7 +4,7 @@
 }
 #partnerVantaNet{
     width: 100vw;
-    height: 50vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,6 +14,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); */
+    width: 100%;
+    height: 100%;
     z-index: 1;
     display: flex;
     justify-content: center;
