--- a/src/styled/AboutRobotos.css
+++ b/src/styled/AboutRobotos.css
@@ -94,10 +94,10 @@
                 Max-Width 600px
 \*--------------------------------------------*/
 @media screen and (max-width: 600px) {
-    #aboutRobotos{height: auto; padding-top: 50px;}
+    #aboutRobotos{height: auto; /* padding-top: 50px; */}
     .about-robotos-wrap{height: auto;}
     .about-robotos-title-wrap{margin-bottom: 0px;}
-    .about-robotos-img-wrap{flex-direction: column; margin-top: 60px;}
+    .about-robotos-img-wrap{flex-direction: column; /* margin-top: 60px; */}
     .about-robotos-left-wrap{width: 100%; height: 300px;}
     .about-robotos-right-wrap{width: 100%; height: 300px;}
     .about-robotos-contents-wrap{padding: 0 40px;}
