--- a/src/styled/NewPlatform.css
+++ b/src/styled/NewPlatform.css
@@ -39,6 +39,8 @@
 }
 .newplatform-img-wrap{
     margin-right: 70px;
+    display: flex;
+    justify-content: center;
 }
 .newplatform-img-wrap img{
     width: 480px;
@@ -72,8 +74,8 @@
 \*--------------------------------------------*/
 @media screen and (max-width: 800px) {
     #newPlatForm{height: auto;}
-    .newplatform-wrap{/* padding: 70px 0; */ /* height: 85vh; */ height: 700px;}
-    .newplatform-overlay{height: 700px;}
+    .newplatform-wrap{/* padding: 70px 0; */ /* height: 85vh; */ height: 800px;}
+    .newplatform-overlay{/* height: 700px; */ height: 100%;}
     .newplatform-contents-wrap{flex-direction: column;}
     .newplatform-img-wrap{margin-right: 0; width: 330px;}
     .newplatform-text-wrap{margin-top: 20px;}
