--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 h1,h2,h3,h4,h5,h6,p{margin: 0; padding: 0;}
 u, a{text-decoration: none;}
 ul{list-style: none;}
+img{max-width: none;}
 body {
   margin: 0;
   padding: 0;
