--- a/src/styled/Value.css
+++ b/src/styled/Value.css
@@ -56,14 +56,17 @@
     background-image: url('../assets/value-image/img03.png');
 }
 .value-text-wrap{
-    left: 55px;
-    top: 450px;
+    width: 404px;
+    top: 500px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 .value-text-wrap img{
     width: 85px;
     width: clamp(50px, 4vw, 85px);
 }
 .value-text-wrap p{
+    /* text-align: center; */
     margin-top: 16px;
     /* font-size: 24px; */
     /* font-size: clamp(14px, 1vw, 22px); */
@@ -79,7 +82,7 @@
     .mobile-value-text{display: block;}
     .value-contents-wrap{flex-direction: column; margin-top: 25px;}
     .value-img-wrap{width: calc(100vw - (100vw - 100%)); height: 30vh;}
-    .value-text-wrap{text-align: center; left: 50%; top: 50%; transform: translate(-50%, -50%);}
+    .value-text-wrap{text-align: center; left: 50%; top: 50%; transform: translate(-50%, -50%); width: auto;}
     .value-text-wrap img{margin: 0 auto;}
     .value-text-wrap p br{display: none;}
 }
